dummy initial implementation, proof of concept

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,7 @@
 platform = espressif8266
 board = d1_mini_lite
 framework = arduino
+lib_deps = 
+	Wire
+	MPU6050
+	adafruit/Adafruit SSD1306@^2.5.7
